--- a/.gitignore
+++ b/.gitignore
@@ -60,11 +60,13 @@ local.properties
 /android/
 
 # Node
-node_modules
+*/node_modules
+client/node_modules
 *.log
 .nvm
 /bots/node_modules/
 package-lock.json
+
 
 # OS X
 .DS_Store
